Fix: Lesson Nav and Content Alignment
Because:
* There was a large space between the end of the lesson heading and lesson content causing the top of the nav and content to be out of alignment.

This commit:
* Removes the top margin from the first lesson content heading to get rid of the redundant spacing and fix most of the alignment issue.
* Adds a little bit of padding to the top of the lesson nav wrapper so aligns better with the first heading in the lesson content.

--- a/app/assets/stylesheets/components/lesson/_navigation.scss
+++ b/app/assets/stylesheets/components/lesson/_navigation.scss
@@ -1,6 +1,7 @@
 .lesson-nav-wrapper {
   display: flex;
   justify-content: center;
+  padding-top: 6px;
 }
 
 .lesson-navigation {
