--- a/app/assets/stylesheets/components/lesson/lesson_content.scss
+++ b/app/assets/stylesheets/components/lesson/lesson_content.scss
@@ -1,16 +1,16 @@
 .lesson-content {
   padding-bottom: 60px;
 
-  h3:nth-child(2) {
-    margin-top: 0;
-  }
-
   h3 {
     margin-bottom: 20px;
     margin-top: 50px;
     font-weight: bold;
     color: $text-primary;
     font-size: 1.5em;
+
+    &:first-child {
+      margin-top: 0;
+    }
 
     @include media-breakpoint-down(md) {
       &:before {
